[gd_scene load_steps=13 format=3 uid="uid://dumaxmxn2amts"]

[ext_resource type="Script" uid="uid://3g5lkrt4nrtn" path="res://Scripts/Traps/snow_geyser.gd" id="1_7r6vr"]
[ext_resource type="Texture2D" uid="uid://s6e8kml8ru5" path="res://Assets/Traps/SnowGeyser/snow_geyser_IDLE.png" id="1_cbot1"]
[ext_resource type="Texture2D" uid="uid://4vj03vms1kx4" path="res://Assets/Traps/SnowGeyser/snow_geyser_WINDUP.png" id="2_7r6vr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1c1d7"]
atlas = ExtResource("1_cbot1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubkhi"]
atlas = ExtResource("2_7r6vr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixmkw"]
atlas = ExtResource("2_7r6vr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfsto"]
atlas = ExtResource("2_7r6vr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsg0q"]
atlas = ExtResource("2_7r6vr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6f5k"]
atlas = ExtResource("2_7r6vr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsgbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c1d7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubkhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixmkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfsto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsg0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6f5k")
}],
"loop": true,
"name": &"windup",
"speed": 20.0
}]

[sub_resource type="Curve" id="Curve_7r6vr"]
_data = [Vector2(0.0116279, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0166904), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_1c1d7"]
offsets = PackedFloat32Array(0, 0.346405, 0.696078, 1)
colors = PackedColorArray(0.372549, 0.803922, 0.894118, 1, 0.506934, 0.83162, 0.897236, 1, 0.843693, 0.94669, 0.967632, 1, 1, 1, 1, 1)

[node name="SnowGeyser" type="Node2D" node_paths=PackedStringArray("animated_sprite", "cooldown_timer", "windup_timer", "eruption_timer", "geyser_particles") groups=["traps"]]
script = ExtResource("1_7r6vr")
animated_sprite = NodePath("AnimatedSprite2D")
cooldown_timer = NodePath("Cooldown_timer")
cooldown_time = 1.0
windup_timer = NodePath("Windup_timer")
windup_time = 1.0
eruption_timer = NodePath("Eruption_timer")
eruption_time = 2.0
geyser_particles = NodePath("CPUParticles2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xsgbu")
animation = &"windup"

[node name="Cooldown_timer" type="Timer" parent="."]
one_shot = true

[node name="Windup_timer" type="Timer" parent="."]
one_shot = true

[node name="Eruption_timer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 5.13381)
emitting = false
amount = 150
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, 600)
initial_velocity_min = 238.09
initial_velocity_max = 238.09
angular_velocity_min = -7.62
angular_velocity_max = 38.1
angle_min = -60.9
angle_max = 61.0
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_7r6vr")
color_ramp = SubResource("Gradient_1c1d7")

[connection signal="timeout" from="Cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="Windup_timer" to="." method="_on_windup_timer_timeout"]
[connection signal="timeout" from="Eruption_timer" to="." method="_on_eruption_timer_timeout"]
